[gd_scene load_steps=10 format=3 uid="uid://cahu2dcqaj8sc"]

[ext_resource type="Script" path="res://ambient_sound.gd" id="1_bv45c"]
[ext_resource type="AudioStream" uid="uid://bq2xj62hoclnk" path="res://assets/audio/sound_effects/night-ambience-17064.mp3" id="2_wu61w"]
[ext_resource type="AudioStream" uid="uid://nrdv2pni533t" path="res://assets/audio/sound_effects/cricket.mp3" id="3_qwo36"]
[ext_resource type="Script" path="res://Cricket.gd" id="4_5g3vj"]
[ext_resource type="AudioStream" uid="uid://be7yrbp8dq517" path="res://assets/audio/sound_effects/owl-hooting-48028.mp3" id="5_a8qsc"]
[ext_resource type="Script" path="res://Owl.gd" id="6_0essl"]
[ext_resource type="AudioStream" uid="uid://cthlck3fnywkb" path="res://assets/audio/sound_effects/Whip-poor-will Song.mp3" id="7_3iisp"]
[ext_resource type="Script" path="res://NightBird.gd" id="8_gtcyf"]
[ext_resource type="AudioStream" uid="uid://bi31x10nci6eo" path="res://assets/audio/sound_effects/10m_crypt.mp3" id="10_be5iq"]

[node name="AmbientSound" type="Node"]
script = ExtResource("1_bv45c")

[node name="NightBugs" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wu61w")
autoplay = true
bus = &"Ambience"

[node name="Cricket" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qwo36")
volume_db = -20.0
bus = &"Ambience"
script = ExtResource("4_5g3vj")

[node name="Timer" type="Timer" parent="Cricket"]

[node name="Owl" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a8qsc")
volume_db = -10.0
bus = &"Ambience"
script = ExtResource("6_0essl")

[node name="Timer" type="Timer" parent="Owl"]
autostart = true

[node name="NightBird" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3iisp")
volume_db = -12.0
bus = &"Ambience"
script = ExtResource("8_gtcyf")

[node name="Timer" type="Timer" parent="NightBird"]

[node name="DungeonAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_be5iq")
volume_db = -10.0

[connection signal="timeout" from="Cricket/Timer" to="Cricket" method="_on_timer_timeout"]
[connection signal="timeout" from="Owl/Timer" to="Owl" method="_on_timer_timeout"]
[connection signal="timeout" from="NightBird/Timer" to="NightBird" method="_on_timer_timeout"]
